# delirium

./: pyproject.toml
backtests/: trades_BTC_USD_20241120_220626.csv  trades_BTC_USD_20241120_223952.csv
src/: analyze.py  analyzer.py  cli.py  collector.py  main.py  viz.py
